# angelic_botnet

./: README.md
nexus_propagator/: Cargo.toml
nexus_propagator/src/: main.rs
vortex_c2/: Cargo.toml
vortex_c2/src/: main.rs  tui.rs
vortex_c2/static/: shadow_dropper.sh
